# GoogleMockWithEmbeddedC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/: toggle_gpio.h
src/: main.c  toggle_gpio.c
test/: CMakeLists.txt
test/doubles/mocks/: gpio_mock.cpp  gpio_mock.hpp
test/src/: test_gpio.cpp  test_main.cpp
